--- a/templates/core/despesas_list.html
+++ b/templates/core/despesas_list.html
@@ -3,35 +3,34 @@
 
 {% block title %}Despesas - SGFP{% endblock %}
 
+{% block page_icon %}<i class="fas fa-minus-circle"></i>{% endblock %}
+{% block page_title %}Despesas{% endblock %}
+{% block page_greeting %}Gerencie suas despesas{% endblock %}
+
 {% block content %}
 <div class="container-fluid">
-    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">
-            {% icone_colorido 'fas fa-minus-circle me-2' 'despesa' %}
-            Despesas
-        </h1>
-        <div class="btn-toolbar mb-2 mb-md-0">
-            <a href="{% url 'core:despesa_create' %}" class="btn btn-primary">
-                {% icone_colorido 'fas fa-plus me-2' 'receita' %}
-                Nova Despesa
-            </a>
-        </div>
-    </div>
 
     <!-- Filtros -->
     <div class="card mb-4">
         <div class="card-body">
-            <form method="get" class="row g-3 align-items-end">
-                <div class="col-md-2">{{ form_filtro.data_inicial.label_tag }}{{ form_filtro.data_inicial }}</div>
-                <div class="col-md-2">{{ form_filtro.data_final.label_tag }}{{ form_filtro.data_final }}</div>
-                <div class="col-md-2">{{ form_filtro.categoria.label_tag }}{{ form_filtro.categoria }}</div>
-                <div class="col-md-2">{{ form_filtro.conta.label_tag }}{{ form_filtro.conta }}</div>
-                <div class="col-md-1">{{ form_filtro.valor_min.label_tag }}{{ form_filtro.valor_min }}</div>
-                <div class="col-md-1">{{ form_filtro.valor_max.label_tag }}{{ form_filtro.valor_max }}</div>
-                <div class="col-md-1">{{ form_filtro.recorrente.label_tag }}{{ form_filtro.recorrente }}</div>
-                <div class="col-md-2">{{ form_filtro.busca_texto.label_tag }}{{ form_filtro.busca_texto }}</div>
-                <div class="col-md-12 d-flex justify-content-end mt-2">
-                    <button type="submit" class="btn btn-primary me-2">
+            <form method="get" class="row gx-3 gy-2 align-items-end">
+                <div class="col-auto">
+                    {{ form_filtro.data_inicial.label_tag }}
+                    {{ form_filtro.data_inicial }}
+                </div>
+                <div class="col-auto">
+                    {{ form_filtro.data_final.label_tag }}
+                    {{ form_filtro.data_final }}
+                </div>
+                <div class="col">{{ form_filtro.categoria.label_tag }}{{ form_filtro.categoria }}</div>
+                <div class="col">{{ form_filtro.conta.label_tag }}{{ form_filtro.conta }}</div>
+                <div class="col">{{ form_filtro.valor_min.label_tag }}{{ form_filtro.valor_min }}</div>
+                <div class="col">{{ form_filtro.valor_max.label_tag }}{{ form_filtro.valor_max }}</div>
+                <div class="col">{{ form_filtro.recorrente.label_tag }}{{ form_filtro.recorrente }}</div>
+                <div class="col">{{ form_filtro.busca_texto.label_tag }}{{ form_filtro.busca_texto }}</div>
+                <div class="w-100"></div>
+                <div class="col-12 d-flex justify-content-start gap-2 mt-2">
+                    <button type="submit" class="btn btn-primary">
                         {% icone_colorido 'fas fa-search me-1' 'padrao' %}Filtrar
                     </button>
                     <a href="{% url 'core:despesa_list' %}" class="btn btn-outline-secondary">
@@ -43,14 +42,14 @@
     </div>
 
     <!-- Lista de Despesas -->
-    <div class="card">
+    <div class="card mt-2" style="margin-top: 10px !important;">
         <div class="card-header">
             <h5 class="mb-0">
                 {% icone_colorido 'fas fa-list me-2' 'padrao' %}
                 Lista de Despesas
             </h5>
         </div>
-        <div class="card-body p-0" style="height: 500px; overflow: hidden;">
+        <div class="card-body p-0" style="height: 420px; overflow: hidden;">
             {% if despesas %}
                 <div class="table-responsive" style="height: 100%; overflow-y: auto;">
                     <table class="table table-hover mb-0">
@@ -107,6 +106,12 @@
     </div>
 </div>
 
-
+<style>
+input[type="date"] {
+    width: 145px !important;
+    min-width: 120px !important;
+    max-width: 180px;
+}
+</style>
 
 {% endblock %} 
