--- a/templates/core/relatorio_financeiro.html
+++ b/templates/core/relatorio_financeiro.html
@@ -4,6 +4,10 @@
 
 {% block title %}Relatórios Financeiros - SGFP{% endblock %}
 
+{% block page_icon %}<i class="fas fa-chart-bar"></i>{% endblock %}
+{% block page_title %}Relatórios Financeiros{% endblock %}
+{% block page_greeting %}Visualize e analise seus dados financeiros{% endblock %}
+
 {% block extra_css %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.css">
 <style>
