--- a/templates/core/transferencia_form.html
+++ b/templates/core/transferencia_form.html
@@ -3,19 +3,12 @@
 
 {% block title %}{{ title }} - SGFP{% endblock %}
 
+{% block page_icon %}<i class="fas fa-exchange-alt"></i>{% endblock %}
+{% block page_title %}Transferências{% endblock %}
+{% block page_greeting %}Registre uma transferência entre contas{% endblock %}
+
 {% block content %}
 <div class="container-fluid">
-    <!-- Header -->
-    <div class="d-flex justify-content-between align-items-center mb-4">
-        <div>
-            <h1 class="h3 mb-0">{{ title }}</h1>
-            <p class="text-muted">Registre uma transferência entre contas</p>
-        </div>
-        <a href="{% url 'core:transferencia_list' %}" class="btn btn-outline-secondary">
-            <i class="fas fa-arrow-left me-2"></i>Voltar
-        </a>
-    </div>
-
     <div class="row justify-content-center">
         <div class="col-lg-8">
             <div class="card shadow">
