--- a/configuracoes/templates/configuracoes/configuracoes.html
+++ b/configuracoes/templates/configuracoes/configuracoes.html
@@ -3,16 +3,12 @@
 
 {% block title %}Configurações - SGFP{% endblock %}
 
+{% block page_icon %}<i class="fas fa-cog"></i>{% endblock %}
+{% block page_title %}Configurações{% endblock %}
+{% block page_greeting %}Personalize preferências e ajustes do sistema{% endblock %}
+
 {% block content %}
 <div class="container-fluid">
-    <!-- Header -->
-    <div class="d-flex justify-content-between align-items-center mb-4">
-        <div>
-            <h1 class="h3 mb-0">Configurações</h1>
-            <p class="text-muted">Personalize suas preferências do sistema</p>
-        </div>
-    </div>
-
     <div class="row">
         <!-- Configurações Gerais -->
         <div class="col-lg-8">
